change file name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link page-scroll" href="#Projects">Projects</a>
             </li>
           </ul>
-          <button class="navbar-brand addmore" title="resume" onclick="window.open('images/resume.pdf')" style = "border: none;background-color: transparent;">
+          <button class="navbar-brand addmore" title="resume" onclick="window.open('images/Resume.pdf')" style = "border: none;background-color: transparent;">
             <img src="images/resumeicon.png" height="30px" width="30px" alt="resume">
           </button>
         </div>
