--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
   </header>
   <section>
     <span class = "span" id="Home"></span>
-    <div class="card-img-overlay text-white container" style = "margin-top: 10%;padding-left: 10%;">
-      <div class = "row justify-content-md-center g-0">
-        <img src="images/my-face.jpg" class = "rounded-circle col-md-6 float-md-end mb-3" alt="Avatar" style="margin-right: 10%;width: 30%;">
-        <div class = "col-md-6" style = "margin-top: 3%;">
+    <div class="card-img-overlay text-white container" style = "padding-left: 10%;padding-top: 10%;">
+      <div class = "row justify-content-center mx-auto">
+        <div class="col-md-2 float-md-end mb-3" style="padding-top:5%; margin-right: 10%;"> 
+          <img src="images/my-face.jpg" class = "rounded-circle " alt="Avatar">
+        </div>
+        <div class = "col-md-6" style = "padding-top: 2%;">
           <h1 class="card-title header1">Hello,</h1>
           <h2 class="card-title header1">I am Ng Ray Zin</h2><br>
           <p class="card-text header2">Second year Information Technology student at
