--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#Projects">Projects</a>
             </li>
           </ul>
-          <button type="button" title="resume" class="navbar-brand" onclick="window.open('images/Resume.pdf')" style = "border: none;background-color: transparent;" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Resume">
+          <button type="button" class="navbar-brand" title="resume" onclick="window.open('images/CV.pdf')" style = "border: none;background-color: transparent;" data-bs-container="body" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="bottom" data-bs-content="Resume">
             <img src="images/resumeicon.png" height="30px" width="30px" alt="resume">
           </button>
         </div>
